I have fixed the header to fit in mobile view however there is an issue with it, but it fits, but i havent fixed the gap issues

--- a/emberMetrics/src/index.css
+++ b/emberMetrics/src/index.css
@@ -86,7 +86,23 @@ main {
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
 }
 
-.header > div {
+.header__details {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+}
+
+@media (max-width : 800px) {
+    .header__details {
+        flex-direction: column;
+        gap: 0;
+    }
+    .header__details > * {
+        margin: 0; /* remove default margins on children */
+    }
+}
+
+.header__device-name {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -94,13 +110,13 @@ main {
     gap: 1rem;
 }
 
-.header > div > p {
+.header__device-name > p {
     font-size: 20px;
     font-weight: bold;
     color: var(--secondary);
 }
 
-.header h1 {
+.header > div > h1 {
     color: var(--tertiary);
 }
 .general-button {
